# cronograma_de_estudos

./: Makefile  README.md  pyproject.toml
azure_ml/: __init__.py  dataset.py  features.py  plots.py
azure_ml/modeling/: predict.py  train.py
tests/: cronograma.csv  cronograma.py
