[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "azure_ml"
version = "0.0.1"
description = "meu projeto de machine learning usando dados do azure com dataset do kaggle"
authors = [
  { name = "joao.fiorenti" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["azure_ml"]
include = ["pyproject.toml", "azure_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["azure_ml"]
force-sort-within-sections = true

